-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------
April 6 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
  * Corrected "if and ;" bug spotted by TheFallenOne222
	
April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * BugFix: Mirror and clone crashed

April 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
  * fixes to look mode and holy handgrenade in the world map	

April 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * (some of these may refer to last commits)
  * Holy handgranade
  * gas grenades
  * total weight of inventory to inventory

April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Mustard gas works somehow

April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added some antidote to priests' inventories
  * Stairs and portals flash in look mode
  * Reduced magical whistle's recharging time from 75 to 60 min, because
    the latter is easier to remember
  * Fixed a certain bug caused by the addition of willpower
  * Fixed a memory leak in the scar code
  * Golems' AGI, DEX and STRs are no longer affected by scars
  * BugFix: Reading a scroll of repair with a corpse in the inventory crashed

April 2 2005 Timo & Heikki

  * Scars

March 24 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * You now hear coins clinking inside imperialists
  * Made some additional preparations for willpower and hiccups

March 4 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Mind worms had somehow disappeared from char.pcx; they've been added
    again
  * The order of priests' limb attachment and leprosy curing services
    has been reversed
  * Bananas can now jam
  * The Holy Hand Grenade, chastity belt, pear of anguish, weight