@@ -541,6 +541,7 @@
 
 #define AMULET_OF_LIFE_SAVING 1
 #define AMULET_OF_ESP 2
+#define AMULET_OF_WARDING 3
 
 #define FULL_HELMET 1
 #define HELM_OF_PERCEPTION 2
